# policy2logic

./: Dockerfile  IMPLEMENTATION_HANDOFF.md  README.md  The requirements.txt  inference.py  main.py  pyproject.toml  test_all.py  test_endpoints.py  test_hf_spaces.py  test_local.py
Docs/: IMPLEMENTATION_STATE copy.md  IMPLEMENTATION_STATE.md  clear.md  concept.md  implementation_report.md  overall_idea_doc.md  themes.txt
policy_to_logic_env/: .dockerignore  Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
policy_to_logic_env/server/: Dockerfile  app.py  dsl_engine.py  environment.py  graders.py  ground_truth.py  policies.py  requirements.txt  rewards.py  scenario_generator.py
training/: colab_training.ipynb  trajectory_optimizer.py  update_colab.py
training/iteration3/: metrics_latest (3).json
training/iteration4/: metrics_latest (5).json
training/results-iteration1/: metrics (1).json
training/results_iteration2/: metrics_latest.json
