[project]
name = "policy-to-logic-env"
version = "1.0.0"
description = "An OpenEnv RL environment for policy-to-logic reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "openenv-core>=0.2.3",
    "pydantic>=2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
inference = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["policy_to_logic_env"]
